<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_corner"
    android:backgroundTint="@color/lime"
    tools:context=".ui.transactions.TransactionsFragment">

    <TextView
        android:id="@+id/tv_title_total_budget"
        style="@style/Text.Medium14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/total_budget"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_total_budget"
        style="@style/Text.Bold24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_title_total_budget"
        app:layout_constraintStart_toStartOf="@+id/tv_title_total_budget"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_total_budget"
        tools:text="@string/_1_000_000" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_see_report"
        style="@style/Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:text="@string/see_report"
        app:icon="@drawable/ic_report_list"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_create_plan"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_total_budget" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_create_plan"
        style="@style/Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:text="@string/create_plan"
        app:icon="@drawable/ic_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_see_report"
        app:layout_constraintTop_toBottomOf="@+id/tv_total_budget" />

</androidx.constraintlayout.widget.ConstraintLayout>